--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "Old Reddit Redirect",
-  "description": "Ensure Reddit always loads the old design",
-  "version": "2.0.9",
+  "name": "X Pro Redirect",
+  "description": "Redirect X.com and Twitter.com to Pro.X.com for a more curated experience",
+  "version": "1.0.0",
   "manifest_version": 3,
   "browser_specific_settings": {
     "gecko_android": {},
     "gecko": {
-      "id": "{9063c2e9-e07c-4c2c-9646-cfe7ca8d0498}",
-      "strict_min_version": "130.0"
+      "id": "{a1b2c3d4-e5f6-4c2c-9646-cfe7ca8d0499}",
+      "strict_min_version": "109.0"
     }
   },
   "icons": {
@@ -18,21 +18,13 @@
     "96": "img/icon96.png",
     "128": "img/icon128.png"
   },
-  "content_scripts": [
-    {
-      "matches": ["https://old.reddit.com/*"],
-      "css": ["styles.css"]
-    }
-  ],
   "permissions": ["declarativeNetRequestWithHostAccess"],
   "host_permissions": [
-    "*://reddit.com/*",
-    "*://www.reddit.com/*",
-    "*://np.reddit.com/*",
-    "*://amp.reddit.com/*",
-    "*://i.reddit.com/*",
-    "*://i.redd.it/*",
-    "*://preview.redd.it/*"
+    "*://x.com/*",
+    "*://www.x.com/*",
+    "*://twitter.com/*",
+    "*://www.twitter.com/*",
+    "*://mobile.twitter.com/*"
   ],
   "declarative_net_request": {
     "rule_resources": [
